# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.376 2005/11/13 13:47:35 rocket Exp $

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS:
  Added Joshua Kinard to authors for his mips contributions.

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Fixed duplicate linuxrc entry in livecd-stage2_template.spec file. Blame
  Paul Kessler on gentoo-catalyst. ;]

  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Change variables from cat1 format to cat2

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Fix modules has no attribute register

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken aliases code that was just proof of concept

  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Output mkisofs command line options to assist in debugging

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/create-iso.sh:
  Fix the -o option

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Add VERY basic support for aliases kernel parameter.

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Remove large section of commented code

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Allow LDFLAGS to be specified as an ENV variable for stage1

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix rc-update to automatically run default options for livecds. Removed an
  erroneous key check.

  02 Nov 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/livecd_stage1_target.py, modules/tinderbox_target.py:
  Make use spec key optional to default to profile defaults
